--- a/CarPages/HyundaiI20.html
+++ b/CarPages/HyundaiI20.html
@@ -375,7 +375,7 @@
     });
   });
 </script>
-
+<script>
 document.addEventListener('DOMContentLoaded', function() {
   // Trip Protection Plan modal logic
   const tripModal = document.getElementById('trip-modal');
@@ -399,5 +399,6 @@ document.addEventListener('DOMContentLoaded', function() {
     });
   }
 });
+</script>
 </body>
 </html>
