--- a/CarPages/HyundaiI20.html
+++ b/CarPages/HyundaiI20.html
@@ -192,6 +192,7 @@
     </div>
   </div>
 </div>
+
   <!-- Trip Protection Plan Modal -->
 <div id="trip-modal" class="fixed inset-0 z-50 flex items-center justify-center bg-black bg-opacity-60 hidden">
   <div class="bg-gradient-to-b from-indigo-800 to-purple-700 text-white rounded-xl shadow-2xl max-w-xl w-full max-h-[90vh] overflow-y-auto p-6 relative">
@@ -259,8 +260,6 @@
     </div>
   </div>
 </div>
-
-  
 
   <script>
     document.addEventListener('DOMContentLoaded', function() {
@@ -375,30 +374,31 @@
     });
   });
 </script>
+
 <script>
-document.addEventListener('DOMContentLoaded', function() {
-  // Trip Protection Plan modal logic
-  const tripModal = document.getElementById('trip-modal');
-  const closeTrip = document.getElementById('close-trip');
-  // Find the "View Details" link in the Booking Summary
-  const viewTrip = Array.from(document.querySelectorAll('a')).find(link =>
-    link.textContent.trim().toUpperCase().includes('VIEW DETAILS')
-  );
-  if (viewTrip && tripModal && closeTrip) {
-    viewTrip.addEventListener('click', function(e) {
-      e.preventDefault();
-      tripModal.classList.remove('hidden');
-    });
-    closeTrip.addEventListener('click', function() {
-      tripModal.classList.add('hidden');
-    });
-    tripModal.addEventListener('click', function(e) {
-      if (e.target === tripModal) {
+  document.addEventListener('DOMContentLoaded', function() {
+    // Trip Protection Plan modal logic
+    const tripModal = document.getElementById('trip-modal');
+    const closeTrip = document.getElementById('close-trip');
+    // Find the "View Details" link in the Booking Summary
+    const viewTrip = Array.from(document.querySelectorAll('a')).find(link =>
+      link.textContent.trim().toUpperCase() === 'VIEW DETAILS'
+    );
+    if (viewTrip && tripModal && closeTrip) {
+      viewTrip.addEventListener('click', function(e) {
+        e.preventDefault();
+        tripModal.classList.remove('hidden');
+      });
+      closeTrip.addEventListener('click', function() {
         tripModal.classList.add('hidden');
-      }
-    });
-  }
-});
+      });
+      tripModal.addEventListener('click', function(e) {
+        if (e.target === tripModal) {
+          tripModal.classList.add('hidden');
+        }
+      });
+    }
+  });
 </script>
 </body>
 </html>
