--- a/CarPages/HyundaiI20.html
+++ b/CarPages/HyundaiI20.html
@@ -126,143 +126,143 @@
   </div>
 
   <!-- Terms Modal -->
-<div id="terms-modal" class="fixed inset-0 z-50 flex items-center justify-center bg-black bg-opacity-60 hidden">
-  <div class="bg-gradient-to-b from-indigo-800 to-purple-700 text-white rounded-xl shadow-2xl max-w-2xl w-full max-h-[90vh] overflow-y-auto p-6 relative">
-    <button id="close-terms" class="absolute top-2 right-4 text-2xl font-bold text-white hover:text-indigo-200">&times;</button>
-    <h2 class="text-2xl font-bold mb-4 text-white">Terms &amp; Conditions</h2>
-    <div class="space-y-4 text-sm">
-      <ol class="list-decimal list-inside space-y-2">
-        <li>
-          <strong>Eligibility</strong><br>
-          The renter must be at least 21 years old and not older than 30 years.<br>
-          A valid driving license (original and photocopy) must be presented at the time of vehicle pickup.<br>
-          The driving license must be valid throughout the rental period.
-        </li>
-        <li>
-          <strong>Booking & Payment</strong><br>
-          A security deposit of ₹3,000 is mandatory and will be refunded after vehicle return (subject to inspection).<br>
-          Full payment (including rental charges and applicable taxes) must be made before vehicle pickup.<br>
-          Cancellations made 24 hours before pickup are eligible for a full refund, after which no refund is provided.
-        </li>
-        <li>
-          <strong>Usage Policy</strong><br>
-          Vehicles must be used only within permitted regions (usually within the country unless otherwise allowed).<br>
-          The renter is not allowed to sub-rent, race, or use the vehicle for commercial purposes without prior permission.<br>
-          Usage beyond free kilometers incurs ₹10/km extra.
-        </li>
-        <li>
-          <strong>Damage, Theft, or Accident</strong><br>
-          In case of any accident, theft, or damage, the renter must inform Rentora immediately.<br>
-          If damage is caused by the renter’s negligence, repair charges will be deducted from the deposit.<br>
-          Insurance covers only basic damages; renters are liable for excess charges.
-        </li>
-        <li>
-          <strong>Fuel & Maintenance</strong><br>
-          Fuel is not included in the rental price. The vehicle must be returned with the same fuel level as at the time of pickup.<br>
-          Regular maintenance is handled by Rentora; renters must not tamper with the engine or components.
-        </li>
-        <li>
-          <strong>Late Return</strong><br>
-          A grace period of 30 minutes is allowed beyond the scheduled return time.<br>
-          After that, late returns are charged per hour or per day, depending on the delay.<br>
-          Repeated late returns may lead to suspension of rental privileges.
-        </li>
-        <li>
-          <strong>Documents Required</strong><br>
-          Government-issued ID proof (e.g., Aadhaar, Passport)<br>
-          Valid driving license (original and copy)<br>
-          Any additional documents if requested for verification
-        </li>
-        <li>
-          <strong>Prohibited Activities</strong><br>
-          Smoking, drinking alcohol, or carrying illegal substances in the vehicle.<br>
-          Overloading passengers or luggage beyond the vehicle's capacity.<br>
-          Driving under the influence of alcohol or drugs.
-        </li>
-        <li>
-          <strong>Company Rights</strong><br>
-          Rentora reserves the right to decline rentals without providing reasons.<br>
-          The company can terminate the rental agreement if the vehicle is misused or policies are violated.
-        </li>
-        <li>
-          <strong>Jurisdiction</strong><br>
-          Any legal disputes will be subject to the jurisdiction of courts located in [Your City, e.g., Bangalore], India.
-        </li>
-      </ol>
+  <div id="terms-modal" class="fixed inset-0 z-50 flex items-center justify-center bg-black bg-opacity-60 hidden">
+    <div class="bg-gradient-to-b from-indigo-800 to-purple-700 text-white rounded-xl shadow-2xl max-w-2xl w-full max-h-[90vh] overflow-y-auto p-6 relative">
+      <button id="close-terms" class="absolute top-2 right-4 text-2xl font-bold text-white hover:text-indigo-200">&times;</button>
+      <h2 class="text-2xl font-bold mb-4 text-white">Terms &amp; Conditions</h2>
+      <div class="space-y-4 text-sm">
+        <ol class="list-decimal list-inside space-y-2">
+          <li>
+            <strong>Eligibility</strong><br>
+            The renter must be at least 21 years old and not older than 30 years.<br>
+            A valid driving license (original and photocopy) must be presented at the time of vehicle pickup.<br>
+            The driving license must be valid throughout the rental period.
+          </li>
+          <li>
+            <strong>Booking & Payment</strong><br>
+            A security deposit of ₹3,000 is mandatory and will be refunded after vehicle return (subject to inspection).<br>
+            Full payment (including rental charges and applicable taxes) must be made before vehicle pickup.<br>
+            Cancellations made 24 hours before pickup are eligible for a full refund, after which no refund is provided.
+          </li>
+          <li>
+            <strong>Usage Policy</strong><br>
+            Vehicles must be used only within permitted regions (usually within the country unless otherwise allowed).<br>
+            The renter is not allowed to sub-rent, race, or use the vehicle for commercial purposes without prior permission.<br>
+            Usage beyond free kilometers incurs ₹10/km extra.
+          </li>
+          <li>
+            <strong>Damage, Theft, or Accident</strong><br>
+            In case of any accident, theft, or damage, the renter must inform Rentora immediately.<br>
+            If damage is caused by the renter’s negligence, repair charges will be deducted from the deposit.<br>
+            Insurance covers only basic damages; renters are liable for excess charges.
+          </li>
+          <li>
+            <strong>Fuel & Maintenance</strong><br>
+            Fuel is not included in the rental price. The vehicle must be returned with the same fuel level as at the time of pickup.<br>
+            Regular maintenance is handled by Rentora; renters must not tamper with the engine or components.
+          </li>
+          <li>
+            <strong>Late Return</strong><br>
+            A grace period of 30 minutes is allowed beyond the scheduled return time.<br>
+            After that, late returns are charged per hour or per day, depending on the delay.<br>
+            Repeated late returns may lead to suspension of rental privileges.
+          </li>
+          <li>
+            <strong>Documents Required</strong><br>
+            Government-issued ID proof (e.g., Aadhaar, Passport)<br>
+            Valid driving license (original and copy)<br>
+            Any additional documents if requested for verification
+          </li>
+          <li>
+            <strong>Prohibited Activities</strong><br>
+            Smoking, drinking alcohol, or carrying illegal substances in the vehicle.<br>
+            Overloading passengers or luggage beyond the vehicle's capacity.<br>
+            Driving under the influence of alcohol or drugs.
+          </li>
+          <li>
+            <strong>Company Rights</strong><br>
+            Rentora reserves the right to decline rentals without providing reasons.<br>
+            The company can terminate the rental agreement if the vehicle is misused or policies are violated.
+          </li>
+          <li>
+            <strong>Jurisdiction</strong><br>
+            Any legal disputes will be subject to the jurisdiction of courts located in [Your City, e.g., Bangalore], India.
+          </li>
+        </ol>
+      </div>
     </div>
   </div>
-</div>
-
   <!-- Trip Protection Plan Modal -->
-<div id="trip-modal" class="fixed inset-0 z-50 flex items-center justify-center bg-black bg-opacity-60 hidden">
-  <div class="bg-gradient-to-b from-indigo-800 to-purple-700 text-white rounded-xl shadow-2xl max-w-xl w-full max-h-[90vh] overflow-y-auto p-6 relative">
-    <button id="close-trip" class="absolute top-2 right-4 text-2xl font-bold text-white hover:text-indigo-200">&times;</button>
-    <h2 class="text-2xl font-bold mb-4 text-white">Trip Protection Plan for Vehicle Rental</h2>
-    <div class="space-y-4 text-sm">
-      <ol class="list-decimal list-inside space-y-2">
-        <li>
-          <strong>Rental Car Insurance</strong><br>
-          Ensure you’re covered in case of damage, theft, or liability.<br>
-          <u>Coverage Options:</u>
-          <ul class="list-disc ml-6">
-            <li><strong>Collision Damage Waiver (CDW) / Loss Damage Waiver (LDW):</strong> Covers damage to the rental vehicle in case of accident or theft.</li>
-            <li><strong>Supplemental Liability Insurance (SLI):</strong> Protects against third-party injury and property damage claims.</li>
-            <li><strong>Personal Accident Insurance (PAI):</strong> Covers medical expenses for you and passengers.</li>
-            <li><strong>Personal Effects Coverage (PEC):</strong> Covers theft of personal belongings from the rental vehicle.</li>
-          </ul>
-          <span class="block mt-2">✅ <em>Tip: Check your credit card benefits or personal auto insurance to avoid double coverage.</em></span>
-        </li>
-        <li>
-          <strong>Trip Interruption/Cancellation Protection</strong><br>
-          Covers you in case your trip is canceled or interrupted due to:<br>
-          <ul class="list-disc ml-6">
-            <li>Illness or injury</li>
-            <li>Flight cancellations</li>
-            <li>Natural disasters</li>
-            <li>Family emergencies</li>
-          </ul>
-          <span class="block mt-2">Reimburses for:</span>
-          <ul class="list-disc ml-6">
-            <li>Non-refundable rental charges</li>
-            <li>Unused rental days</li>
-            <li>Change fees</li>
-          </ul>
-        </li>
-        <li>
-          <strong>24/7 Roadside Assistance</strong><br>
-          Ensure you’re not stranded due to unexpected issues:<br>
-          <ul class="list-disc ml-6">
-            <li>Flat tires</li>
-            <li>Dead battery</li>
-            <li>Lockout service</li>
-            <li>Towing</li>
-            <li>Fuel delivery</li>
-          </ul>
-          <span class="block mt-2">✅ <em>Often available as an add-on from rental agencies or third-party insurers.</em></span>
-        </li>
-        <li>
-          <strong>Travel Delay / Missed Connection Coverage</strong><br>
-          If travel disruptions affect your rental period:<br>
-          <ul class="list-disc ml-6">
-            <li>Covers hotel, meals, and transportation during delays</li>
-            <li>Reimbursement for missed rental time</li>
-          </ul>
-        </li>
-        <li>
-          <strong>International Travel Considerations (if applicable)</strong><br>
-          <ul class="list-disc ml-6">
-            <li>Check if your plan covers rentals outside your home country</li>
-            <li>Ensure compliance with local driving laws</li>
-            <li>Consider international insurance add-ons if traveling abroad</li>
-          </ul>
-        </li>
-      </ol>
+  <div id="trip-modal" class="fixed inset-0 z-50 flex items-center justify-center bg-black bg-opacity-60 hidden">
+    <div class="bg-gradient-to-b from-indigo-800 to-purple-700 text-white rounded-xl shadow-2xl max-w-xl w-full max-h-[90vh] overflow-y-auto p-6 relative">
+      <button id="close-trip" class="absolute top-2 right-4 text-2xl font-bold text-white hover:text-indigo-200">&times;</button>
+      <h2 class="text-2xl font-bold mb-4 text-white">Trip Protection Plan for Vehicle Rental</h2>
+      <div class="space-y-4 text-sm">
+        <ol class="list-decimal list-inside space-y-2">
+          <li>
+            <strong>Rental Car Insurance</strong><br>
+            Ensure you’re covered in case of damage, theft, or liability.<br>
+            <u>Coverage Options:</u>
+            <ul class="list-disc ml-6">
+              <li><strong>Collision Damage Waiver (CDW) / Loss Damage Waiver (LDW):</strong> Covers damage to the rental vehicle in case of accident or theft.</li>
+              <li><strong>Supplemental Liability Insurance (SLI):</strong> Protects against third-party injury and property damage claims.</li>
+              <li><strong>Personal Accident Insurance (PAI):</strong> Covers medical expenses for you and passengers.</li>
+              <li><strong>Personal Effects Coverage (PEC):</strong> Covers theft of personal belongings from the rental vehicle.</li>
+            </ul>
+            <span class="block mt-2">✅ <em>Tip: Check your credit card benefits or personal auto insurance to avoid double coverage.</em></span>
+          </li>
+          <li>
+            <strong>Trip Interruption/Cancellation Protection</strong><br>
+            Covers you in case your trip is canceled or interrupted due to:<br>
+            <ul class="list-disc ml-6">
+              <li>Illness or injury</li>
+              <li>Flight cancellations</li>
+              <li>Natural disasters</li>
+              <li>Family emergencies</li>
+            </ul>
+            <span class="block mt-2">Reimburses for:</span>
+            <ul class="list-disc ml-6">
+              <li>Non-refundable rental charges</li>
+              <li>Unused rental days</li>
+              <li>Change fees</li>
+            </ul>
+          </li>
+          <li>
+            <strong>24/7 Roadside Assistance</strong><br>
+            Ensure you’re not stranded due to unexpected issues:<br>
+            <ul class="list-disc ml-6">
+              <li>Flat tires</li>
+              <li>Dead battery</li>
+              <li>Lockout service</li>
+              <li>Towing</li>
+              <li>Fuel delivery</li>
+            </ul>
+            <span class="block mt-2">✅ <em>Often available as an add-on from rental agencies or third-party insurers.</em></span>
+          </li>
+          <li>
+            <strong>Travel Delay / Missed Connection Coverage</strong><br>
+            If travel disruptions affect your rental period:<br>
+            <ul class="list-disc ml-6">
+              <li>Covers hotel, meals, and transportation during delays</li>
+              <li>Reimbursement for missed rental time</li>
+            </ul>
+          </li>
+          <li>
+            <strong>International Travel Considerations (if applicable)</strong><br>
+            <ul class="list-disc ml-6">
+              <li>Check if your plan covers rentals outside your home country</li>
+              <li>Ensure compliance with local driving laws</li>
+              <li>Consider international insurance add-ons if traveling abroad</li>
+            </ul>
+          </li>
+        </ol>
+      </div>
     </div>
   </div>
-</div>
 
   <script>
     document.addEventListener('DOMContentLoaded', function() {
+      // Booking details logic
       // Get URL parameters
       const urlParams = new URLSearchParams(window.location.search);
       
@@ -349,56 +349,49 @@
         const paymentUrl = '../payment.html?' + urlParams.toString();
         window.location.href = paymentUrl;
       });
-    });
-  </script>
-  <script>
-  document.addEventListener('DOMContentLoaded', function() {
-    const modal = document.getElementById('terms-modal');
-    const closeBtn = document.getElementById('close-terms');
-    // Attach to all "KNOW MORE..." links
-    document.querySelectorAll('a').forEach(link => {
-      if (link.textContent.trim().toUpperCase().includes('KNOW MORE')) {
-        link.addEventListener('click', function(e) {
+
+      // Terms Modal logic
+      const modal = document.getElementById('terms-modal');
+      const closeBtn = document.getElementById('close-terms');
+      document.querySelectorAll('a').forEach(link => {
+        if (link.textContent.trim().toUpperCase().includes('KNOW MORE')) {
+          link.addEventListener('click', function(e) {
+            e.preventDefault();
+            modal.classList.remove('hidden');
+          });
+        }
+      });
+      closeBtn.addEventListener('click', function() {
+        modal.classList.add('hidden');
+      });
+      modal.addEventListener('click', function(e) {
+        if (e.target === modal) {
+          modal.classList.add('hidden');
+        }
+      });
+
+      // Trip Protection Plan modal logic
+      const tripModal = document.getElementById('trip-modal');
+      const closeTrip = document.getElementById('close-trip');
+      // Find the "View Details" link in the Booking Summary
+      const viewTrip = Array.from(document.querySelectorAll('a')).find(link =>
+        link.textContent.trim().toUpperCase().includes('VIEW DETAILS')
+      );
+      if (viewTrip && tripModal && closeTrip) {
+        viewTrip.addEventListener('click', function(e) {
           e.preventDefault();
-          modal.classList.remove('hidden');
+          tripModal.classList.remove('hidden');
+        });
+        closeTrip.addEventListener('click', function() {
+          tripModal.classList.add('hidden');
+        });
+        tripModal.addEventListener('click', function(e) {
+          if (e.target === tripModal) {
+            tripModal.classList.add('hidden');
+          }
         });
       }
     });
-    closeBtn.addEventListener('click', function() {
-      modal.classList.add('hidden');
-    });
-    modal.addEventListener('click', function(e) {
-      if (e.target === modal) {
-        modal.classList.add('hidden');
-      }
-    });
-  });
-</script>
-
-<script>
-  document.addEventListener('DOMContentLoaded', function() {
-    // Trip Protection Plan modal logic
-    const tripModal = document.getElementById('trip-modal');
-    const closeTrip = document.getElementById('close-trip');
-    // Find the "View Details" link in the Booking Summary
-    const viewTrip = Array.from(document.querySelectorAll('a')).find(link =>
-      link.textContent.trim().toUpperCase() === 'VIEW DETAILS'
-    );
-    if (viewTrip && tripModal && closeTrip) {
-      viewTrip.addEventListener('click', function(e) {
-        e.preventDefault();
-        tripModal.classList.remove('hidden');
-      });
-      closeTrip.addEventListener('click', function() {
-        tripModal.classList.add('hidden');
-      });
-      tripModal.addEventListener('click', function(e) {
-        if (e.target === tripModal) {
-          tripModal.classList.add('hidden');
-        }
-      });
-    }
-  });
-</script>
+  </script>
 </body>
 </html>
